--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
     <div ng-app="myApp">
       <div class="container">
         <div class="row">
+          <div class="col-md-3">
+
+          </div>
+          <div class="col-md-6">
+            <h1>Growth Rubric</h1>
+          </div>
+          <div class="col-md-3">
+
+          </div>
+        </div>
+        <div style="margin-top:20px" class="row">
           <div class="col-md-1">
 
           </div>
